# rust-examples

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build-selenium-manager.yml  build.yml  release-selenium-manager.yml
anyhow/: Cargo.toml
async/: Cargo.toml
async/src/: main.rs
basic_sum/: Cargo.toml
basic_sum/src/: main.rs
bzip/: Cargo.toml
bzip/src/: main.rs
bzip2/: Cargo.toml
bzip2/src/: main.rs
capture/: Cargo.toml
capture/src/: main.rs
clap_cli/: Cargo.toml
clap_cli/src/: main.rs
clap_cli/tests/: cli_tests.rs
clap_derive/: Cargo.toml
clap_derive/src/: main.rs
clap_derive/tests/: cli_test.rs
clap_verbosity/: Cargo.toml
clap_verbosity/src/: main.rs
config/src/: main.rs
confy/: Cargo.toml
confy/src/: main.rs
debpkg/: Cargo.toml
debpkg/src/: main.rs
dirs/: Cargo.toml
dirs/src/: main.rs
download/: Cargo.toml
download/src/: main.rs
fs2/: Cargo.toml
fs2/src/: main.rs
fs_extra/: Cargo.toml
fs_extra/src/: main.rs
hashmap/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
hello_world/tests/: hello_tests.rs
hyper/: Cargo.toml
hyper/src/: main.rs
is_exec/: Cargo.toml
is_exec/src/: main.rs
json/: Cargo.toml
json/src/: main.rs
metadata/: Cargo.toml  sm-metadata-v1.json  sm-metadata-v2.json  sm-metadata-v3.json  sm-metadata-v4.json
metadata/src/: main.rs
os_arch/: Cargo.toml
os_arch/src/: main.rs
portable_executable/: Cargo.toml
portable_executable/src/: main.rs
process_path/: Cargo.toml
process_path/src/: main.rs
rc/src/: main.rs
references/src/: main.rs
reqwest/: Cargo.toml
reqwest-json/: Cargo.toml
reqwest-json/src/: main.rs
reqwest-post/: Cargo.toml
reqwest-post/src/: main.rs
reqwest/src/: main.rs
rpm/: Cargo.toml
rpm/src/: main.rs
run_shell/: Cargo.toml
run_shell/src/: main.rs
scap/: Cargo.toml
scap/src/: main.rs
selenium-manager/: Cargo.toml
selenium-manager/src/: browser.rs  chrome.rs  downloads.rs  edge.rs  files.rs  firefox.rs  lib.rs  main.rs  manager.rs  metadata.rs  utils.rs
selenium-manager/tests/: cli_tests.rs  shell_tests.rs  sm_tests.rs
shell/: Cargo.toml
shell/src/: main.rs
shell/tests/: shell_tests.rs
thread_local/: Cargo.toml
thread_local/src/: main.rs
toml/: Cargo.toml  config.toml
toml/src/: main.rs
traits/src/: lib.rs  main.rs
uncompress/: Cargo.toml
uncompress/src/: main.rs
winapi/: Cargo.toml
winapi/src/: main.rs
window_titles/: Cargo.toml
window_titles/src/: main.rs
xar/: Cargo.toml
xar/src/: main.rs
