[workspace]
members = [
    "hello_world",
    "os_arch",
    "basic_sum",
    "clap_cli",
    "dirs",
    "references",
    "clap_verbosity",
    "clap_derive",
    "confy",
    "hyper",
    "reqwest",
    "reqwest-json",
    "shell",
    "download",
    "selenium-manager",
    "traits",
    "json",
    "metadata",
    "hashmap",
    "config",
    "thread_local",
    "rc",
    "process_path",
    "is_exec",
    "run_shell",
    "toml",
]