[package]
name = "async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time"] }
reqwest = { version = "0.12.4", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"