[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5.0"  # Para capturar la pantalla
image = "0.25.8"  # Para manipular imágenes
#ffmpeg-next = "4.3.8"
windows-capture = "1.4.2"