[package]
name = "clap_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
exitcode = "1.1.2"
log = "0.4.25"
env_logger = "0.11.6"

[dev-dependencies]
assert_cmd = "2.0.16"