[package]
name = "clap_verbosity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
exitcode = "1.1.2"
log = "0.4.20"
env_logger = "0.10.2"
