[package]
name = "clap_verbosity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
exitcode = "1.1.2"
log = "0.4.28"
env_logger = "0.11.6"
