[package]
name = "json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.223", features = ["derive"] }
time = { version = "0.3.43", features = ["serde"] }
serde_json = "1.0.143"
