[package]
name = "reqwest-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = [ "rustls-tls" ] }
tokio = { version = "1.45.0", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
