[package]
name = "selenium-manager"
version = "1.0.0-M1"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
env_logger = "0.11.6"
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["full"] }
tempfile = "3.23.0"
reqwest = "0.12.23"
zip = "3.0.0"
directories = "6.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
flate2 = "1.1.2"
tar = "0.4.44"
infer = "0.19.0"

[dev-dependencies]
assert_cmd = "2.0.17"
rstest = "0.26.1"