[package]
name = "selenium-manager"
version = "1.0.0-M1"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.10"
regex = "1.12.3"
tokio = { version = "1.52.0", features = ["full"] }
tempfile = "3.27.0"
reqwest = "0.12.28"
zip = "8.5.1"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = "1.1.9"
tar = "0.4.45"
infer = "0.19.0"

[dev-dependencies]
assert_cmd = "2.2.0"
rstest = "0.26.1"